# ichigyo-ls

./: Cargo.toml  README.md  flake.nix  plan.md
src/: lib.rs  main.rs  server.rs  textlint.rs
tests/: integration_test.rs
tests/fixtures/: sample.md
