[package]
name = "ichigyo-ls"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-trait = "0.1"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tower-lsp = "0.20"

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
invalid_reference_casting = "deny"

[lints.clippy]
mod_module_files = "warn"
excessive_precision = "warn"
impl_trait_in_params = "warn"
float_cmp = "warn"
redundant_field_names = "warn"
